--- a/Templates/Designs/TTonlineNew/Custom/New_Sidebar.cshtml
+++ b/Templates/Designs/TTonlineNew/Custom/New_Sidebar.cshtml
@@ -1,4 +1,4 @@
-<aside class="sidebar clearfix " style="margin-top: 34px;">
+<aside class="sidebar clearfix sidebar-container" style="margin-top: 34px;">
     
     <div class="widget adwidget  ">
         @Include("Banners/BigBox1.cshtml")
