--- a/Templates/Designs/TTonlineNew/ProdusePeArticol.cshtml
+++ b/Templates/Designs/TTonlineNew/ProdusePeArticol.cshtml
@@ -1,37 +1,43 @@
 ﻿@{
   int counter = 0;
   var Produse = GetLoop("Item.Produse.Value");
-  
-    if(Produse.Any()){  
-        <h3 class="block-title"><span>Produse</span></h3> 
+
+    if (Produse.Any())
+    {
+        <h3 class="block-title"><span>Produse</span></h3>
         <div class="row">
             <div class="col-md-12">
-            <div class="owl-carousel owl-theme">                          
-                @foreach(LoopItem i in Produse){
-                    string mainImageRaw = i.GetString("Ecom:Product.ImageLarge.Default.Clean"); 
-                    string mainImage = !string.IsNullOrEmpty(mainImageRaw) ? GetImage(mainImageRaw, 160, 120) + "&bgcolor=white"  : "/Files/Images/NoImage/160x120.png";
-                    string mainTitle = i.GetString("Ecom:Product.Name");
-                    string mainURL = i.GetString("Ecom:Product.Link.Clean");
+                <div class="owl-carousel owl-theme">
+                    @foreach (LoopItem i in Produse)
+                    {
+                        string mainImageRaw = i.GetString("Ecom:Product.ImageLarge.Default.Clean");
+                        string mainImage = !string.IsNullOrEmpty(mainImageRaw) ? GetImage(mainImageRaw, 160, 120) + "&bgcolor=white" : "/Files/Images/NoImage/160x120.png";
+                        string mainTitle = i.GetString("Ecom:Product.Name");
+                        string mainURL = i.GetString("Ecom:Product.Link.Clean");
 
-                    <div class="item">
-                        @if(!string.IsNullOrEmpty(i.GetString("Ecom:Product.ImageLarge.Default.Clean"))){
-                            <a href="@mainURL"><img src="@mainImage" width="160" height="100" alt="" /></a>
-                        }else{
-                            <a href="@mainURL"><img src="@areaLayoutPath/assets/img/demo/160x120.png" height="100" alt="" /></a>
-                        }
-                            <h4><a href="@mainURL">@mainTitle</a></h4>  
-                    </div>              
-                            
-                }
+                        <div class="item">
+                            @if (!string.IsNullOrEmpty(i.GetString("Ecom:Product.ImageLarge.Default.Clean")))
+                            {
+                                <a href="@mainURL"><img src="@mainImage" width="160" height="100" alt=""/></a>
+                            }
+                            else
+                            {
+                                <a href="@mainURL"><img src="@areaLayoutPath/assets/img/demo/160x120.png" height="100" alt=""/></a>
+                            }
+                            <h4><a href="@mainURL">@mainTitle</a></h4>
+                        </div>
+
+                    }
+                </div>
             </div>
-            </div>    
-        </div>    
-    }else {
-        string idCompanie =  GetString("Item.De_Companie");
+        </div>
+    }
+    else {
+        var idCompanie =  (GetString("Item.De_Companie") ?? "").Split(new[] { ',', ';' }, StringSplitOptions.RemoveEmptyEntries);
         Dynamicweb.Content.Items.Item companie = null;
-        if (!string.IsNullOrEmpty(idCompanie)){
-            companie = Dynamicweb.Content.Items.Item.GetItemById("Taxonomie_Companii", idCompanie);  
-            string representativeProductsArray =  companie["RepresentativeProducts"] != null ? companie["RepresentativeProducts"].ToString() : "";
+        if (idCompanie.Any()){
+            companie = Dynamicweb.Content.Items.Item.GetItemById("Taxonomie_Companii", idCompanie.First());  
+            string representativeProductsArray = companie != null && companie["RepresentativeProducts"] != null ? companie["RepresentativeProducts"].ToString() : "";
             if(companie != null &&  representativeProductsArray != ""){
                 var ProduseReprezentative = ProductFacade.GetItemTypeProducts(representativeProductsArray);
                 <!--Standard start -->
