--- a/Templates/Designs/TTonlineNew/DataManagement/Forms/Form/ComentariiArticole.cshtml
+++ b/Templates/Designs/TTonlineNew/DataManagement/Forms/Form/ComentariiArticole.cshtml
@@ -1,45 +1,49 @@
-﻿<h2>@Translate("Adauga un comentariu")</h2>
-@{
-    var formStart = GetString("Form.Start");
-    var formHiddenFields = GetString("Form.Hidden");
-    var submit = GetString("Form.Button.Submit");
-    var formEnd = GetString("Form.End");
-    @formStart
-    @formHiddenFields
-    <table id="defaultform" class="alternate" cellspacing="0" cellpadding="0">
-        <tr>
-            <td>
-                <input type="text" id="Article_Comments_UserId" name="Article_Comments_UserId" value=""/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="text" id="Article_Comments_Username" name="Article_Comments_Username" value="" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="text" id="Article_Comments_PageId" name="Article_Comments_PageId" value="" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <label for="Article_Comments_Comment">@Translate("Adauga comentariu")</label>
-                    </div>
-                </div>
-                <textarea id="Article_Comments_Comment" name="Article_Comments_Comment" cols="50" rows="10"></textarea>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="text" id="Article_Comments_Status" name="Article_Comments_Status" value="" />
-            </td>
-        </tr>
-    </table>
-    @submit
-    @formEnd
-    
-}
-
+﻿@using System.Web
+@using System
+<div class="section comentsForm">
+   @{
+        var formStart = GetString("Form.Start");
+        var formHiddenFields = GetString("Form.Hidden");
+        var submit = GetString("Form.Button.Submit");
+        var formEnd = GetString("Form.End");
+        var currentPage = GetGlobalValue("Global:Page.ID").ToString();
+        DateTime currentDateRaw = DateTime.Now;
+        var currentDate = currentDateRaw.ToString("dd/MM/yyyy");
+        DateTime currentTimeRaw = DateTime.Now;
+        var currentTime = currentTimeRaw.ToString("hh:mm");
+        @formStart
+        @formHiddenFields
+       <div class="row hidden" >
+           <div class="col-xs-12">
+               <input type="text" id="Comments_UserId" name="Comments_UserId" value=""/>
+               <input type="text" id="Comments_PageId" name="Comments_PageId" value="@currentPage"/>
+               <input type="text" id="Comments_Status" name="Comments_Status" value="Pending" />
+               <input type="text" id="Comments_Data" name="Comments_Data" value="@currentDate" />
+               <input type="text" id="Comments_Ora" name="Comments_Ora" value="@currentTime" />
+            </div>
+       </div>
+       <div class="row">
+           <div class="col-xs-12">
+              <div class="input_comment">
+                   <input type="email"  id="Comments_Username" name="Comments_Username" required="true" placeholder="Email" value=""/>
+               </div>
+           </div>
+           <div class="col-xs-12">
+               <div class="input_comment">
+                   <input type="text"  id="Comments_Nume" name="Comments_Nume" required="true" placeholder="Nume" value=""/>
+               </div>
+           </div>
+       </div>
+       <div class="row">
+           <div class="col-xs-12">
+               <div class="input_comment">
+                   <textarea id="Comments_Comment" name="Comments_Comment" required="true" cols="94" rows="10" placeholder="Comentariu..."></textarea>
+               </div>
+           </div>
+       </div>
+       <div class="col-xs-12">
+           <input class="btn btn-primary" type="submit" value="Adauga Comentariu">
+       </div>
+        @formEnd
+    }
+</div>
