--- a/Templates/Designs/TTonlineNew/css/10_custom/00_style.css
+++ b/Templates/Designs/TTonlineNew/css/10_custom/00_style.css
@@ -6873,3 +6873,9 @@ span.seeMore , span.seeMoreFurnizori, span.seeMoreSubcategorie{
     overflow: hidden;
   }
 }
+#Article_Comments_Username{
+    background-color:white!important;
+    border: 1px solid rgb(169, 169, 169)!important;
+    text-align: left!important;
+    padding-left:3px!important;
+}
