--- a/Templates/Designs/TTonlineNew/TestPage.cshtml
+++ b/Templates/Designs/TTonlineNew/TestPage.cshtml
@@ -129,14 +129,39 @@
           <!-- Comentarii -->
           <div class="comment_block">
             <div class="col-xs-12">
-              <div class="comment_block handlebars-wrapper" data-template="CommentsTemplate" data-json-feed="/Default.aspx?ID=25352&PAGEID=@currentPage"> <!--currentPage-->
+              <h4>Comentarii</h4>
+             <div class="comment_block handlebars-wrapper" data-template="CommentsTemplate" data-json-feed="/Default.aspx?ID=25352&PAGEID=@currentPage"> <!--currentPage-->
               </div>
             </div>
+            @if (Dynamicweb.Security.UserManagement.User.IsExtranetUserLoggedIn()){
             <button class="btn btn-primary" id="AdaugaComentariu">Adauga Comentariu</button>
+            }
+            else
+            {
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
+                Adauga Comentariu
+              </button>
+            }
             <div id="comentariuContainer" class="hidden">
               <div class="create_new_comment">
                 @RenderParagraphContent(3037)
               </div>
+            </div>
+          </div>
+          <!-- Login Modal -->
+          <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content-login">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Autentificare</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  @RenderParagraphContent(3042)
+                </div>
+               </div>
             </div>
           </div>
 
